Add mongodb extension

--- a/php/7.2/zend3/Dockerfile
+++ b/php/7.2/zend3/Dockerfile
@@ -283,6 +283,9 @@ RUN set -eux; \
 
 COPY docker-php-ext-* docker-php-entrypoint /usr/local/bin/
 
+RUN pecl install mongodb \
+    && docker-php-ext-enable mongodb
+
 RUN docker-php-ext-install gd zip ldap pdo pdo_mysql intl
 
 RUN a2enmod rewrite
